post: fix word wrap

--- a/client/src/components/MainPage/Post/Post.scss
+++ b/client/src/components/MainPage/Post/Post.scss
@@ -23,7 +23,7 @@
 	line-height: 19px;
 	letter-spacing: $base-letter-spacing;
 	position: relative;
-	word-break: break-all;
+	word-wrap: break-word;
 
 	> * {
 		margin: 0 25px;
